<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CelebActivity">
    <LinearLayout
        android:id="@+id/celeb_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/celeb_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/gray"
            android:padding="15dp"
            android:text="@string/celeb_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/celeb_taboo1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taboo1"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/celeb_taboo2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taboo2"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/celeb_taboo3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taboo3"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/portrait_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_rotate_device"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>